project1/syntax.output
State 41 conflicts: 1 shift/reduce
State 53 conflicts: 5 shift/reduce
State 60 conflicts: 2 shift/reduce
State 76 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 116 conflicts: 9 shift/reduce
State 118 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 127 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 9 shift/reduce
State 155 conflicts: 1 shift/reduce, 20 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList
   11           | VarDec ExtDecList error

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT ID LC DefList RC
   15                | STRUCT ID
   16                | STRUCT ID LC DefList error

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB INT error

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP VarList error
   23       | ID LP error

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec
   26        | ParamDec VarList error

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | Exp error
   38     | RETURN Exp error
   39     | IF LP Exp error Stmt
   40     | IF error Exp RP Stmt
   41     | WHILE LP Exp error Stmt

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier DecList error

   46 DecList: Dec
   47        | Dec COMMA DecList
   48        | Dec error DecList

   49 Dec: VarDec
   50    | VarDec ASSIGN Exp

   51 Exp: Exp ASSIGN Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp LT Exp
   55    | Exp LE Exp
   56    | Exp GT Exp
   57    | Exp GE Exp
   58    | Exp NE Exp
   59    | Exp EQ Exp
   60    | Exp PLUS Exp
   61    | Exp MINUS Exp
   62    | Exp MUL Exp
   63    | Exp DIV Exp
   64    | LP Exp RP
   65    | MINUS Exp
   66    | NOT Exp
   67    | ID LP Args RP
   68    | ID LP RP
   69    | Exp LB Exp RB
   70    | Exp DOT ID
   71    | ID
   72    | INT
   73    | FLOAT
   74    | CHAR
   75    | ILLEGAL_TOKEN Exp
   76    | ILLEGAL_TOKEN
   77    | LP Exp error
   78    | error Exp RP
   79    | ID LP error
   80    | ID error RP
   81    | Exp LB error
   82    | Exp error RB

   83 Args: Exp COMMA Args
   84     | Exp
   85     | Exp Args error


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 11 16 19 22 23 26 37 38 39 40 41 45 48 77 78 79 80
    81 82 85
ILLEGAL_TOKEN (258) 75 76
LOWER_ELSE (259)
ELSE (260) 35
TYPE (261) 12
STRUCT (262) 14 15 16
IF (263) 34 35 39 40
WHILE (264) 36 41
RETURN (265) 33 38
INT (266) 18 19 72
FLOAT (267) 73
CHAR (268) 74
ID (269) 14 15 16 17 20 21 22 23 67 68 70 71 79 80
ASSIGN (270) 50 51
OR (271) 53
AND (272) 52
LT (273) 54
LE (274) 55
GT (275) 56
GE (276) 57
NE (277) 58
EQ (278) 59
PLUS (279) 60
MINUS (280) 61 65
MUL (281) 62
DIV (282) 63
NOT (283) 66
LP (284) 20 21 22 23 34 35 36 39 41 64 67 68 77 79
RP (285) 20 21 34 35 36 40 64 67 68 78 80
LB (286) 18 19 69 81
RB (287) 18 69 82
DOT (288) 70
SEMI (289) 4 5 31 33 44
COMMA (290) 10 24 47 83
LC (291) 14 16 28
RC (292) 14 28


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Program (39)
    on left: 1, on right: 0
ExtDefList (40)
    on left: 2 3, on right: 1 2
ExtDef (41)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (42)
    on left: 9 10 11, on right: 4 7 10 11
Specifier (43)
    on left: 12 13, on right: 4 5 6 7 8 27 44 45
StructSpecifier (44)
    on left: 14 15 16, on right: 13
VarDec (45)
    on left: 17 18 19, on right: 9 10 11 18 19 27 49 50
FunDec (46)
    on left: 20 21 22 23, on right: 6
VarList (47)
    on left: 24 25 26, on right: 20 22 24 26
ParamDec (48)
    on left: 27, on right: 24 25 26
CompSt (49)
    on left: 28, on right: 6 32
StmtList (50)
    on left: 29 30, on right: 28 29
Stmt (51)
    on left: 31 32 33 34 35 36 37 38 39 40 41, on right: 29 34 35 36
    39 40 41
DefList (52)
    on left: 42 43, on right: 14 16 28 42
Def (53)
    on left: 44 45, on right: 42
DecList (54)
    on left: 46 47 48, on right: 44 45 47 48
Dec (55)
    on left: 49 50, on right: 46 47 48
Exp (56)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 76 77 78 79 80 81 82, on right: 31 33 34 35
    36 37 38 39 40 41 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 69 70 75 77 78 81 82 83 84 85
Args (57)
    on left: 83 84 85, on right: 67 83 85


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   14 StructSpecifier: STRUCT . ID LC DefList RC
   15                | STRUCT . ID
   16                | STRUCT . ID LC DefList error

    ID  shift, and go to state 8


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error
    8       | Specifier . error

    error  shift, and go to state 11
    ID     shift, and go to state 12
    SEMI   shift, and go to state 13

    ExtDecList  go to state 14
    VarDec      go to state 15
    FunDec      go to state 16


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   14 StructSpecifier: STRUCT ID . LC DefList RC
   15                | STRUCT ID .
   16                | STRUCT ID . LC DefList error

    LC  shift, and go to state 17

    $default  reduce using rule 15 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 11

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


State 12

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . LP VarList error
   23       | ID . LP error

    LP  shift, and go to state 18

    $default  reduce using rule 17 (VarDec)


State 13

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 14

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error

    error  shift, and go to state 19
    SEMI   shift, and go to state 20


State 15

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   11           | VarDec . ExtDecList error
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB INT error

    ID     shift, and go to state 21
    LB     shift, and go to state 22
    COMMA  shift, and go to state 23

    $default  reduce using rule 9 (ExtDecList)

    ExtDecList  go to state 24
    VarDec      go to state 15


State 16

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 17

   14 StructSpecifier: STRUCT ID LC . DefList RC
   16                | STRUCT ID LC . DefList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 18

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP
   22       | ID LP . VarList error
   23       | ID LP . error

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 31

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 19

    7 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 7 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 22

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . INT error

    INT  shift, and go to state 35


State 23

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 21

    ExtDecList  go to state 36
    VarDec      go to state 15


State 24

   11 ExtDecList: VarDec ExtDecList . error

    error  shift, and go to state 37


State 25

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 38
    Def              go to state 29


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   44 Def: Specifier . DecList SEMI
   45    | Specifier . DecList error

    ID  shift, and go to state 21

    VarDec   go to state 39
    DecList  go to state 40
    Dec      go to state 41


State 28

   14 StructSpecifier: STRUCT ID LC DefList . RC
   16                | STRUCT ID LC DefList . error

    error  shift, and go to state 42
    RC     shift, and go to state 43


State 29

   42 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 44
    Def              go to state 29


State 30

   23 FunDec: ID LP error .

    $default  reduce using rule 23 (FunDec)


State 31

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 32

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 21

    VarDec  go to state 45


State 33

   20 FunDec: ID LP VarList . RP
   22       | ID LP VarList . error

    error  shift, and go to state 46
    RP     shift, and go to state 47


State 34

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .
   26        | ParamDec . VarList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    COMMA   shift, and go to state 48

    $default  reduce using rule 25 (VarList)

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 49
    ParamDec         go to state 34


State 35

   18 VarDec: VarDec LB INT . RB
   19       | VarDec LB INT . error

    error  shift, and go to state 50
    RB     shift, and go to state 51


State 36

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 37

   11 ExtDecList: VarDec ExtDecList error .

    $default  reduce using rule 11 (ExtDecList)


State 38

   28 CompSt: LC DefList . StmtList RC

    error          shift, and go to state 52
    ILLEGAL_TOKEN  shift, and go to state 53
    IF             shift, and go to state 54
    WHILE          shift, and go to state 55
    RETURN         shift, and go to state 56
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63
    LC             shift, and go to state 25

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 39

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB INT error
   49 Dec: VarDec .
   50    | VarDec . ASSIGN Exp

    ASSIGN  shift, and go to state 68
    LB      shift, and go to state 22

    $default  reduce using rule 49 (Dec)


State 40

   44 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error

    error  shift, and go to state 69
    SEMI   shift, and go to state 70


State 41

   46 DecList: Dec .
   47        | Dec . COMMA DecList
   48        | Dec . error DecList

    error  shift, and go to state 71
    COMMA  shift, and go to state 72

    error  [reduce using rule 46 (DecList)]
    SEMI   reduce using rule 46 (DecList)


State 42

   16 StructSpecifier: STRUCT ID LC DefList error .

    $default  reduce using rule 16 (StructSpecifier)


State 43

   14 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 44

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 45

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB INT error
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 27 (ParamDec)


State 46

   22 FunDec: ID LP VarList error .

    $default  reduce using rule 22 (FunDec)


State 47

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 48

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 73
    ParamDec         go to state 34


State 49

   26 VarList: ParamDec VarList . error

    error  shift, and go to state 74


State 50

   19 VarDec: VarDec LB INT error .

    $default  reduce using rule 19 (VarDec)


State 51

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 52

   78 Exp: error . Exp RP

    error          shift, and go to state 52
    ILLEGAL_TOKEN  shift, and go to state 53
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63

    Exp  go to state 75


State 53

   75 Exp: ILLEGAL_TOKEN . Exp
   76    | ILLEGAL_TOKEN .

    error  shift, and go to state 52
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    CHAR   shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    ILLEGAL_TOKEN  error (nonassociative)

    error   [reduce using rule 76 (Exp)]
    INT     [reduce using rule 76 (Exp)]
    FLOAT   [reduce using rule 76 (Exp)]
    CHAR    [reduce using rule 76 (Exp)]
    ID      [reduce using rule 76 (Exp)]
    ASSIGN  reduce using rule 76 (Exp)
    OR      reduce using rule 76 (Exp)
    AND     reduce using rule 76 (Exp)
    LT      reduce using rule 76 (Exp)
    LE      reduce using rule 76 (Exp)
    GT      reduce using rule 76 (Exp)
    GE      reduce using rule 76 (Exp)
    NE      reduce using rule 76 (Exp)
    EQ      reduce using rule 76 (Exp)
    PLUS    reduce using rule 76 (Exp)
    MUL     reduce using rule 76 (Exp)
    DIV     reduce using rule 76 (Exp)
    RP      reduce using rule 76 (Exp)
    LB      reduce using rule 76 (Exp)
    RB      reduce using rule 76 (Exp)
    DOT     reduce using rule 76 (Exp)
    SEMI    reduce using rule 76 (Exp)
    COMMA   reduce using rule 76 (Exp)

    Exp  go to state 76


State 54

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt
   39     | IF . LP Exp error Stmt
   40     | IF . error Exp RP Stmt

    error  shift, and go to state 77
    LP     shift, and go to state 78


State 55

   36 Stmt: WHILE . LP Exp RP Stmt
   41     | WHILE . LP Exp error Stmt

    LP  shift, and go to state 79


State 56

   33 Stmt: RETURN . Exp SEMI
   38     | RETURN . Exp error

    error          shift, and go to state 52
    ILLEGAL_TOKEN  shift, and go to state 53
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63

    Exp  go to state 80


State 57

   72 Exp: INT .

    $default  reduce using rule 72 (Exp)


State 58

   73 Exp: FLOAT .

    $default  reduce using rule 73 (Exp)


State 59

   74 Exp: CHAR .

    $default  reduce using rule 74 (Exp)


State 60

   67 Exp: ID . LP Args RP
   68    | ID . LP RP
   71    | ID .
   79    | ID . LP error
   80    | ID . error RP

    error  shift, and go to state 81
    LP     shift, and go to state 82

    error          [reduce using rule 71 (Exp)]
    ILLEGAL_TOKEN  reduce using rule 71 (Exp)
    INT            reduce using rule 71 (Exp)
    FLOAT          reduce using rule 71 (Exp)
    CHAR           reduce using rule 71 (Exp)
    ID             reduce using rule 71 (Exp)
    ASSIGN         reduce using rule 71 (Exp)
    OR             reduce using rule 71 (Exp)
    AND            reduce using rule 71 (Exp)
    LT             reduce using rule 71 (Exp)
    LE             reduce using rule 71 (Exp)
    GT             reduce using rule 71 (Exp)
    GE             reduce using rule 71 (Exp)
    NE             reduce using rule 71 (Exp)
    EQ             reduce using rule 71 (Exp)
    PLUS           reduce using rule 71 (Exp)
    MINUS          reduce using rule 71 (Exp)
    MUL            reduce using rule 71 (Exp)
    DIV            reduce using rule 71 (Exp)
    NOT            reduce using rule 71 (Exp)
    LP             [reduce using rule 71 (Exp)]
    RP             reduce using rule 71 (Exp)
    LB             reduce using rule 71 (Exp)
    RB             reduce using rule 71 (Exp)
    DOT            reduce using rule 71 (Exp)
    SEMI           reduce using rule 71 (Exp)
    COMMA          reduce using rule 71 (Exp)


State 61

   65 Exp: MINUS . Exp

    error          shift, and go to state 52
    ILLEGAL_TOKEN  shift, and go to state 53
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63

    Exp  go to state 83


State 62

   66 Exp: NOT . Exp

    error          shift, and go to state 52
    ILLEGAL_TOKEN  shift, and go to state 53
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63

    Exp  go to state 84


State 63

   64 Exp: LP . Exp RP
   77    | LP . Exp error

    error          shift, and go to state 52
    ILLEGAL_TOKEN  shift, and go to state 53
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63

    Exp  go to state 85


State 64

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 65

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 66

   29 StmtList: Stmt . StmtList

    error          shift, and go to state 52
    ILLEGAL_TOKEN  shift, and go to state 53
    IF             shift, and go to state 54
    WHILE          shift, and go to state 55
    RETURN         shift, and go to state 56
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63
    LC             shift, and go to state 25

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 87
    Stmt      go to state 66
    Exp       go to state 67


State 67

   31 Stmt: Exp . SEMI
   37     | Exp . error
   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . DOT ID
   81    | Exp . LB error
   82    | Exp . error RB

    error   shift, and go to state 88
    ASSIGN  shift, and go to state 89
    OR      shift, and go to state 90
    AND     shift, and go to state 91
    LT      shift, and go to state 92
    LE      shift, and go to state 93
    GT      shift, and go to state 94
    GE      shift, and go to state 95
    NE      shift, and go to state 96
    EQ      shift, and go to state 97
    PLUS    shift, and go to state 98
    MINUS   shift, and go to state 99
    MUL     shift, and go to state 100
    DIV     shift, and go to state 101
    LB      shift, and go to state 102
    DOT     shift, and go to state 103
    SEMI    shift, and go to state 104


State 68

   50 Dec: VarDec ASSIGN . Exp

    error          shift, and go to state 52
    ILLEGAL_TOKEN  shift, and go to state 53
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63

    Exp  go to state 105


State 69

   45 Def: Specifier DecList error .

    $default  reduce using rule 45 (Def)


State 70

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 71

   48 DecList: Dec error . DecList

    ID  shift, and go to state 21

    VarDec   go to state 39
    DecList  go to state 106
    Dec      go to state 41


State 72

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 21

    VarDec   go to state 39
    DecList  go to state 107
    Dec      go to state 41


State 73

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 74

   26 VarList: ParamDec VarList error .

    $default  reduce using rule 26 (VarList)


State 75

   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . DOT ID
   78    | error Exp . RP
   81    | Exp . LB error
   82    | Exp . error RB

    error   shift, and go to state 108
    ASSIGN  shift, and go to state 89
    OR      shift, and go to state 90
    AND     shift, and go to state 91
    LT      shift, and go to state 92
    LE      shift, and go to state 93
    GT      shift, and go to state 94
    GE      shift, and go to state 95
    NE      shift, and go to state 96
    EQ      shift, and go to state 97
    PLUS    shift, and go to state 98
    MINUS   shift, and go to state 99
    MUL     shift, and go to state 100
    DIV     shift, and go to state 101
    RP      shift, and go to state 109
    LB      shift, and go to state 102
    DOT     shift, and go to state 103


State 76

   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . DOT ID
   75    | ILLEGAL_TOKEN Exp .
   81    | Exp . LB error
   82    | Exp . error RB
